# rust-transcriber

./: .gitignore  Cargo 2.toml  Cargo.toml  README.md  meeting.m4a  output.parakeet.txt  output.txt
crates/transcriber-cli/: Cargo.toml
crates/transcriber-cli/src/: cli.rs  main.rs
crates/transcriber-cli/tests/: cli.rs
crates/transcriber-core/: Cargo.toml
crates/transcriber-core/src/: audio.rs  lib.rs  watcher.rs  writer.rs
crates/transcriber-core/src/transcriber/: config.rs  mod.rs  moonshine.rs  parakeet.rs  whisper.rs
crates/transcriber-core/tests/: watcher_tests.rs
scripts/: setup_parakeet_runtime.sh
spec/Rust Transcriber/CODIN-178/: HLD.md
spec/desktop/CODIN-162/: HLD.md  LLD.md
spec/rust-transcriber/CODIN-178/: LLD.md
